--- a/src/NtfsReader/NtfsReader.csproj
+++ b/src/NtfsReader/NtfsReader.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<TargetFramework>net8.0-windows10.0.17763.0</TargetFramework>
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
@@ -10,5 +10,6 @@
 		<IncludeSymbols>true</IncludeSymbols>
 		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
 		<PackageLicenseExpression>LGPL-2.1-or-later</PackageLicenseExpression>
+		<Nullable>enable</Nullable>
 	</PropertyGroup>
 </Project>
